# littleeye

./: DESIGN.md  README.md  main.py  pyproject.toml
src/littleeye/: __init__.py
tests/: test_littleeye.py
